--- a/My Clam Harbor.html
+++ b/My Clam Harbor.html
@@ -788,14 +788,14 @@ If love is a risk, I was all in.
             <!-- Photo gallery with local images -->
             <h2 class="gallery-title">🌹 our precious frames 🌹</h2>
             <div class="gallery">
-                <div class="photo-card"><img src="diva1.jpg" alt="Diva 1" onerror="this.src='https://placehold.co/400x300/fbe9f2/cc99b0?text=Photo+1'"><i class="fas fa-rose"></i><p>first date glow</p></div>
-                <div class="photo-card"><img src="diva2.jpg" alt="Diva 2" onerror="this.src='https://placehold.co/400x300/f1e2fa/b3a0c5?text=Photo+2'"><i class="fas fa-rose"></i><p>wanderlust · together</p></div>
-                <div class="photo-card"><img src="diva3.jpg" alt="Diva 3" onerror="this.src='https://placehold.co/400x300/fee7e9/dd9fb0?text=Photo+3'"><i class="fas fa-rose"></i><p>clam harbor days</p></div>
-                <div class="photo-card"><img src="diva4.jpg" alt="Diva 4" onerror="this.src='https://placehold.co/400x300/dde9f7/b2c9e0?text=Photo+4'"><i class="fas fa-rose"></i><p>sunset smiles</p></div>
-                <div class="photo-card"><img src="diva5.jpg" alt="Diva 5" onerror="this.src='https://placehold.co/400x300/fce3e8/e0a1b5?text=Photo+5'"><i class="fas fa-rose"></i><p>cozy cafe</p></div>
-                <div class="photo-card"><img src="diva6.jpg" alt="Diva 6" onerror="this.src='https://placehold.co/400x300/e2f0f9/aac7db?text=Photo+6'"><i class="fas fa-rose"></i><p>beach walk</p></div>
-                <div class="photo-card"><img src="diva7.jpg" alt="Diva 7" onerror="this.src='https://placehold.co/400x300/fbe2ef/d9a0b7?text=Photo+7'"><i class="fas fa-rose"></i><p>city lights</p></div>
-                <div class="photo-card"><img src="diva8.jpg" alt="Diva 8" onerror="this.src='https://placehold.co/400x300/d9f0ec/b0cfd0?text=Photo+8'"><i class="fas fa-rose"></i><p>forever ours</p></div>
+                <div class="photo-card"><img src="diva1.jpg" alt="Diva 1" onerror="this.src='https://placehold.co/400x300/fbe9f2/cc99b0?text=Photo+1'"><i class="fas fa-rose"></i><p>sunsine</p></div>
+                <div class="photo-card"><img src="diva2.jpg" alt="Diva 2" onerror="this.src='https://placehold.co/400x300/f1e2fa/b3a0c5?text=Photo+2'"><i class="fas fa-rose"></i><p>Mi Amor</p></div>
+                <div class="photo-card"><img src="diva3.jpg" alt="Diva 3" onerror="this.src='https://placehold.co/400x300/fee7e9/dd9fb0?text=Photo+3'"><i class="fas fa-rose"></i><p>forever ours</p></div>
+                <div class="photo-card"><img src="diva4.jpg" alt="Diva 4" onerror="this.src='https://placehold.co/400x300/dde9f7/b2c9e0?text=Photo+4'"><i class="fas fa-rose"></i><p>Queen of My Heart</p></div>
+                <div class="photo-card"><img src="diva5.jpg" alt="Diva 5" onerror="this.src='https://placehold.co/400x300/fce3e8/e0a1b5?text=Photo+5'"><i class="fas fa-rose"></i><p>Half Half</p></div>
+                <div class="photo-card"><img src="diva6.jpg" alt="Diva 6" onerror="this.src='https://placehold.co/400x300/e2f0f9/aac7db?text=Photo+6'"><i class="fas fa-rose"></i><p>Forever Us</p></div>
+                <div class="photo-card"><img src="diva7.jpg" alt="Diva 7" onerror="this.src='https://placehold.co/400x300/fbe2ef/d9a0b7?text=Photo+7'"><i class="fas fa-rose"></i><p>My Girl/My Man</p></div>
+                <div class="photo-card"><img src="diva8.jpg" alt="Diva 8" onerror="this.src='https://placehold.co/400x300/d9f0ec/b0cfd0?text=Photo+8'"><i class="fas fa-rose"></i><p>city lights</p></div>
             </div>
 
             <!-- Three cards -->
